wsserver/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  selector:
    app: ws-server
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
